<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android" android:theme="@style/Settings">

    <Preference android:layout="@layout/layout_settings_top"
                android:key="settings_top"
                android:title=""
                android:summary=""/>

    <Preference android:key="refresh"
                app:title="@string/refresh_title"
                app:summary="@string/refresh_description"
                app:icon="@drawable/ic_refresh_white_48dp"/>

    <Preference android:key="disconnect"
                app:title="@string/disconnect_title"
                app:summary="@string/disconnect_description"
                app:icon="@drawable/ic_link_off_white_48dp"/>

    <Preference android:key="about"
                app:title="@string/about_title"
                app:summary="@string/about_description"
                app:icon="@drawable/ic_people_alt_white_48dp"/>



</PreferenceScreen>