<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/fragment_vertical_margin"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        tools:context=".ui.connexion.FragmentConnexion">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

        <TextView
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvLogo"
                android:fontFamily="@font/ethnocentric_rg"
                android:textColor="@color/primaryColor"
                android:textSize="52sp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/login_label"
                android:hint="@string/login_label"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:minHeight="52dp"
                android:textColor="@color/inputDefaultColor"
                android:textColorHint="@color/inputHintDefaultColor"
                android:background="@drawable/custom_edittext" android:paddingHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/tvLogo"
                android:layout_marginTop="64dp"/>
        <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/password_label"
                android:hint="@string/password_label"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:textColor="@color/inputDefaultColor"
                android:textColorHint="@color/inputHintDefaultColor"
                android:minHeight="52dp"
                android:background="@drawable/custom_edittext" android:paddingHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@+id/username" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"/>
        <TextView
                android:text="@string/forgotten_password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView"
                android:textColor="@color/secondaryColor"
                app:layout_constraintTop_toBottomOf="@+id/password" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:visibility="gone"/>
        <CheckBox
                android:text="@string/remember_me_label"
                android:layout_width="wrap_content"
                android:layout_height="48dp" android:id="@+id/checkBox"
                android:buttonTint="@color/inputDefaultColor" android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_marginTop="8dp" android:layout_marginStart="8dp"/>
        <Button
                android:id="@+id/btn_login"
                android:enabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/action_sign_in"
                android:textColor="@color/primaryTextColor" android:background="@drawable/custom_button"
                app:backgroundTint="@color/inputDefaultColor"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>