<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.notes.FragmentNotes">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/constraintLayout" android:paddingBottom="16dp"
            app:layout_constraintTop_toTopOf="parent">

        <ImageButton
                android:src="@drawable/ic_arrow_back_white_48dp"
                android:layout_width="48dp"
                android:layout_height="48dp" android:id="@+id/btn_note_back"
                android:background="@drawable/custom_back_icon_button" android:padding="5dp"
                android:scaleType="fitCenter" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="32dp"
                android:layout_marginTop="24dp" android:contentDescription="@string/previous"
                android:visibility="invisible"/>
        <ImageButton
                android:src="@drawable/ic_picture_as_pdf_white_48dp"
                android:layout_width="48dp"
                android:layout_height="48dp" android:id="@+id/btn_note_export"
                android:background="@drawable/custom_back_icon_button" android:padding="8dp"
                android:scaleType="fitCenter" app:layout_constraintEnd_toStartOf="@+id/btn_note_search"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="32dp"
                android:layout_marginTop="24dp" android:contentDescription="@string/export"
                android:visibility="invisible"/>

        <ImageButton
                android:src="@drawable/ic_search_white_48dp"
                android:layout_width="48dp"
                android:layout_height="48dp" android:id="@+id/btn_note_search"
                android:background="@drawable/custom_back_icon_button" android:padding="6dp"
                android:scaleType="fitCenter" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="32dp"
                android:layout_marginTop="24dp" android:contentDescription="@string/search"
                android:visibility="invisible"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_note" android:text="@string/notes"
                android:textColor="@color/primaryColor" app:layout_constraintTop_toBottomOf="@+id/btn_note_back"
                app:layout_constraintStart_toStartOf="parent" android:textStyle="bold" android:textSize="32sp"
                android:layout_marginStart="32dp" android:layout_marginTop="16dp"/>
        <TextView
                android:text="@string/average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/tv_note" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp" android:layout_marginStart="32dp"
                android:textColor="@color/primaryColor" android:textSize="16sp"/>
        <TextView
                android:text="00,00/20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_notes_moyenne"
                android:textColor="@color/secondaryColor" android:textStyle="bold" android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" android:layout_marginTop="4dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fillViewport="true" app:layout_constraintBottom_toTopOf="@+id/frameLayout3">
        <ExpandableListView
                android:id="@+id/elv_notes"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
                android:dividerHeight="2dp"
        >
        </ExpandableListView>
    </ScrollView>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="56dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/frameLayout3">

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>