<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/constraintLayout" android:paddingBottom="54dp"
            app:layout_constraintTop_toTopOf="parent">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_settings" android:text="@string/settings"
                android:textColor="@color/primaryColor"
                app:layout_constraintStart_toStartOf="parent" android:textStyle="bold" android:textSize="32sp"
                android:layout_marginStart="32dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="88dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/constraintLayout3">

        <Button
                android:text="@string/actualise"
                android:layout_width="0dp"
                android:layout_height="54dp" android:id="@+id/bt_settings_update"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
                app:layout_constraintTop_toTopOf="parent" android:background="@drawable/custom_button"
                android:textSize="16sp" android:textStyle="bold"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2" android:id="@+id/scrollView2"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" android:layout_marginTop="52dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0">
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TableRow android:layout_width="match_parent" android:layout_height="match_parent" android:clickable="true" android:id="@+id/tableRow">
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_people_alt_white_48dp"
                            android:id="@+id/imageButton" app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                            android:tint="#ff000000" android:background="#00FFFFFF" android:layout_marginStart="32dp"
                            android:scaleType="fitCenter" android:labelFor="@id/textView2"/>
                    <TextView
                            android:text="@string/about_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView2"
                            app:layout_constraintStart_toEndOf="@+id/imageButton"
                            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginTop="8dp" android:textSize="24sp" android:layout_marginStart="16dp"
                            android:textColor="@color/defaultTextColor" android:textStyle="bold"
                            android:labelFor="@+id/tableRow" tools:ignore="SpeakableTextPresentCheck"/>
                    <TextView
                            android:text="@string/about_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/textView4"
                            app:layout_constraintStart_toEndOf="@+id/imageButton"
                            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
                            android:layout_marginStart="16dp" android:textColor="@color/defaultTextColor"
                            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="8dp"
                            android:textSize="16sp" android:labelFor="@+id/tableRow"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp" app:layout_constraintBottom_toTopOf="@+id/layout_fake_menu"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/constraintLayout2">

        <Button
                android:text="@string/disconnect"
                android:layout_width="match_parent"
                android:layout_height="54dp" android:id="@+id/bt_settings_disconnect"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/custom_button" android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp" android:textStyle="bold" android:textSize="16sp"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="56dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/layout_fake_menu">

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>